# ReDCM

./: CMakeLists.txt  NAMESPACE  README.md  TODO  configure  configure.win
R/: DCMdata.R  ReDCM_BMS.r  ReDCM_bilinear_condition.r  ReDCM_bireduce.r  ReDCM_c.r  ReDCM_data.R  ReDCM_estimate.r  ReDCM_estimate_struct.R  ReDCM_evidence.r  ReDCM_external.R  ReDCM_fx_fmri.r  ReDCM_generate.r  ReDCM_generics.R  ReDCM_ges.r  ReDCM_gx_fmri.r  ReDCM_int.r  ReDCM_kernels.r  ReDCM_model.R  ReDCM_nlsi_GN.r  ReDCM_parameters.R  ReDCM_utils.r
data/: DCM.RData
inst/extdata/: DCM.mat
src/: CMakeLists.txt  Makevars  arrays.c  arrays.h  fdjac_ext.c  functest.c  fx_fmri.c  fx_fmri.h  gsl_multifit_nlin_ext.h  gx_fmri.c  gx_fmri.h  integrate.c  integrate.h  rInterface.c  reduce.c  reduce.h  utils.c  utils.h
