CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT( REDCM )

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

FIND_PACKAGE(GSL REQUIRED)
# FIND_PACKAGE(Boost)
# FIND_PACKAGE(ViennaCL)
# FIND_PACKAGE(OpenMP)
# TODO: find R package

set(CMAKE_C_FLAGS "-std=gnu99 -O3 -Wall -lm -lR -I..")
set(CMAKE_CXX_FLAGS "-std=gnu99 -O3 -Wall -lm -lR -I..")
#set(CMAKE_CXX_FLAGS "-fopenmp -O3 -Wall -I..")

set(CMAKE_BUILD_TYPE Release)
#set(CMAKE_BUILD_TYPE Debug)

#set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
#set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

ADD_SUBDIRECTORY( src )
